@@ -1,12 +1,19 @@
 V0.?.? ? AP,...
 
-* Termite [AP]
+* Termite [AP,GB]
   - New (optional) dependency: SWI-Prolog >= 5.6
     (auto-detected by ./configure, or use --with-swi-prolog=[yes,no])
 	* When enabled, all Term I/O will be handled by libpl, bringing
 	speed and stability improvements.
 	* This also paves the road for PROLOG-based analyses and
 	transformations to be run directly within an analyzer.
+  - Replaced some of the numerical constants for type modifiers with more
+    descriptive atoms.
+  - Correct generation of container nodes even when the list of successors
+    is empty (arity used to be broken).
+
+* New data flow analysis attribute "position" [GB]
+  - can be used to get information about the interprocedural analysis context
 
 V0.8.5 2008-11-22 GB,AP,VP,MS
 
